// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rednder ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expense to show
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={2}
      createdAt={-345600000}
      description="gum"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={0}
      createdAt={0}
      description="cell"
      id={2}
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={1}
      createdAt={345600000}
      description="bell"
      id={3}
      key="3"
      note=""
    />
  </div>
</div>
`;
